--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,21 +1,26 @@
 {
-  "name": "Budget App",
-  "short_name": "iBudget",
   "theme_color": "#f9f7f5",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
+  "background_color": "#f9f7f5",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
+      "purpose": "maskable",
+      "sizes": "512x512",
+      "src": "icon512_maskable.png",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "purpose": "any",
       "sizes": "512x512",
+      "src": "icon512_rounded.png",
       "type": "image/png"
     }
-  ]
+  ],
+  "orientation": "portrait",
+  "display": "standalone",
+  "dir": "auto",
+  "lang": "en-US",
+  "name": "iBudget",
+  "short_name": "iBudget",
+  "start_url": "/",
+  "scope": "/"
 }
