--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "daisyui": "^5.3.9",
+    "idb": "^8.0.3",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
